--- a/projects/aas-lib/src/lib/auth/profile-form/profile-form.component.html
+++ b/projects/aas-lib/src/lib/auth/profile-form/profile-form.component.html
@@ -1,10 +1,10 @@
 <!-----------------------------------------------------------------------------
- !
- ! Copyright (c) 2019-2023 Fraunhofer IOSB-INA Lemgo,
- ! eine rechtlich nicht selbstaendige Einrichtung der Fraunhofer-Gesellschaft
- ! zur Foerderung der angewandten Forschung e.V.
- !
- !---------------------------------------------------------------------------->
+!
+! Copyright (c) 2019-2023 Fraunhofer IOSB-INA Lemgo,
+! eine rechtlich nicht selbstaendige Einrichtung der Fraunhofer-Gesellschaft
+! zur Foerderung der angewandten Forschung e.V.
+!
+!---------------------------------------------------------------------------->
 
 <form (ngSubmit)="submit()">
     <div class="modal-header">
@@ -15,12 +15,14 @@
         <button type="button" class="btn-close" (click)="cancel()" aria-label="Cancel"></button>
     </div>
     <div class="modal-body">
-        <ngb-toast *ngFor="let message of messages" [autohide]="false" class="bg-danger w-100 mb-3">
+        @for (message of messages; track message) {
+        <ngb-toast [autohide]="false" class="bg-danger w-100 mb-3">
             <div class="d-flex">{{message}}</div>
         </ngb-toast>
+        }
         <div class="form-floating mb-3">
-            <input #inputEMail type="email" class="form-control" id="intputProfileEMail" [(ngModel)]="id"
-                name="userId" placeholder="example@email.com" (input)="onInputEMail()">
+            <input #inputEMail type="email" class="form-control" id="intputProfileEMail" [(ngModel)]="id" name="userId"
+                placeholder="example@email.com" (input)="onInputEMail()">
             <label for="intputProfileEMail" translate>LABEL_EMAIL</label>
         </div>
         <div class="form-floating mb-3">
