--- a/projects/aas-portal/src/app/aas/aas.component.html
+++ b/projects/aas-portal/src/app/aas/aas.component.html
@@ -1,101 +1,103 @@
 <!-----------------------------------------------------------------------------
- !
- ! Copyright (c) 2019-2023 Fraunhofer IOSB-INA Lemgo,
- ! eine rechtlich nicht selbstaendige Einrichtung der Fraunhofer-Gesellschaft
- ! zur Foerderung der angewandten Forschung e.V.
- !
- !---------------------------------------------------------------------------->
+!
+! Copyright (c) 2019-2023 Fraunhofer IOSB-INA Lemgo,
+! eine rechtlich nicht selbstaendige Einrichtung der Fraunhofer-Gesellschaft
+! zur Foerderung der angewandten Forschung e.V.
+!
+!---------------------------------------------------------------------------->
 
 <div id="start-container" class="container-fluid">
-    <div class="row mt-1">
-        <div class="d-flex flex-row">
-            <div class="border border-secondary rounded p-1">
-                <fhg-img [height]="88" [width]="88" [src]="thumbnail" alt="assets/resources/aas.svg" />
-            </div>
-            <div class="d-flex flex-row ps-1">
-                <div class="d-flex flex-column">
-                    <div class="fw-bold text-end small text-nowrap" translate>LABEL_ENDPOINT</div>
-                    <div class="fw-bold text-end small text-nowrap" translate>LABEL_AAS_ID_SHORT</div>
-                    <div class="fw-bold text-end small text-nowrap" translate>LABEL_AAS_ID</div>
-                    <div class="fw-bold text-end small text-nowrap" translate>LABEL_VERSION</div>
-                    <div class="fw-bold text-end small text-nowrap" translate>LABEL_ASSET_ID</div>
-                </div>
-                <div class="d-flex flex-column flex-grow-1 ps-1">
-                    <div class="small text-nowrap">{{address}}</div>
-                    <div class="small text-nowrap">{{idShort}}</div>
-                    <div class="small text-nowrap">{{id}}</div>
-                    <div class="small text-nowrap">{{version}}</div>
-                    <div class="small text-nowrap">{{assetId}}</div>
-                </div>
-            </div>
+  <div class="row mt-1">
+    <div class="d-flex flex-row">
+      <div class="border border-secondary rounded p-1">
+        <fhg-img [height]="88" [width]="88" [src]="thumbnail" alt="assets/resources/aas.svg" />
+      </div>
+      <div class="d-flex flex-row ps-1">
+        <div class="d-flex flex-column">
+          <div class="fw-bold text-end small text-nowrap" translate>LABEL_ENDPOINT</div>
+          <div class="fw-bold text-end small text-nowrap" translate>LABEL_AAS_ID_SHORT</div>
+          <div class="fw-bold text-end small text-nowrap" translate>LABEL_AAS_ID</div>
+          <div class="fw-bold text-end small text-nowrap" translate>LABEL_VERSION</div>
+          <div class="fw-bold text-end small text-nowrap" translate>LABEL_ASSET_ID</div>
         </div>
+        <div class="d-flex flex-column flex-grow-1 ps-1">
+          <div class="small text-nowrap">{{address}}</div>
+          <div class="small text-nowrap">{{idShort}}</div>
+          <div class="small text-nowrap">{{id}}</div>
+          <div class="small text-nowrap">{{version}}</div>
+          <div class="small text-nowrap">{{assetId}}</div>
+        </div>
+      </div>
     </div>
-    <div class="row">
-        <fhg-aas-tree #aasTree [state]="state" [search]="search" [document]="document" [(selected)]="selectedElements">
-        </fhg-aas-tree>
-    </div>
+  </div>
+  <div class="row">
+    <fhg-aas-tree #aasTree [state]="state" [search]="search" [document]="document" [(selected)]="selectedElements">
+    </fhg-aas-tree>
+  </div>
 </div>
 
 <ng-template #aasToolbar>
-    <div class="btn-group me-2">
-        <button type="button" class="btn btn-primary" (click)="play()" [disabled]="state === 'online'">
-            <i class="bi bi-play-fill"></i>
-        </button>
-        <button type="button" class="btn btn-primary" (click)="stop()" [disabled]="state === 'offline'">
-            <i class="bi bi-stop-fill"></i>
-        </button>
+  <div class="btn-group me-2">
+    <button type="button" class="btn btn-primary" (click)="play()" [disabled]="state === 'online'">
+      <i class="bi bi-play-fill"></i>
+    </button>
+    <button type="button" class="btn btn-primary" (click)="stop()" [disabled]="state === 'offline'">
+      <i class="bi bi-stop-fill"></i>
+    </button>
+  </div>
+  <div class="input-group me-2">
+    <select #select class="form-select" [(ngModel)]="dashboardPage">
+      @for (option of (dashboardPages | async); track option) {
+        <option [ngValue]="option">{{option}}</option>
+      }
+    </select>
+    <button type="button" class="btn btn-primary" (click)="addToDashboard('Line')"
+      [disabled]="!canAddToDashboard()">
+      <i class="bi bi-graph-up"></i>
+    </button>
+    <button type="button" class="btn btn-primary" (click)="addToDashboard('BarVertical')"
+      [disabled]="!canAddToDashboard()">
+      <i class="bi bi-bar-chart-line-fill"></i>
+    </button>
+  </div>
+  <div class="btn-group me-2" [hidden]="(editable | async) === false">
+    <button type="button" class="btn btn-primary" (click)="synchronize()" [disabled]="!canSynchronize()">
+      <i class="bi bi-arrow-repeat"></i>
+    </button>
+  </div>
+  <div class="btn-group me-2">
+    <button type="button" class="btn btn-primary" (click)="downloadDocument()" [disabled]="!canDownloadDocument()">
+      <i class="bi bi-download"></i>
+    </button>
+  </div>
+  <div class="btn-group me-2" [hidden]="(editable | async) === false">
+    <button type="button" class="btn btn-primary" (click)="undo()" [disabled]="!canUndo()">
+      <i class="bi bi-arrow-90deg-left"></i>
+    </button>
+    <button type="button" class="btn btn-primary" (click)="redo()" [disabled]="!canRedo()">
+      <i class="bi bi-arrow-90deg-right"></i>
+    </button>
+  </div>
+  <div class="btn-group me-2" [hidden]="(editable | async) === false">
+    <button type="button" class="btn btn-primary" (click)="newElement()" [disabled]="!canNewElement()">
+      <i class="bi bi-plus-lg"></i>
+    </button>
+    <button type="button" class="btn btn-primary" (click)="editElement()" [disabled]="!canEditElement()">
+      <i class="bi bi-pencil"></i>
+    </button>
+    <button type="button" class="btn btn-primary" (click)="deleteElement()" [disabled]="!canDeleteElement()">
+      <i class="bi bi-trash"></i>
+    </button>
+  </div>
+  <div class="input-group flex-grow-1 me-2">
+    <div class="input-group-text"><i class="bi bi-search"></i></div>
+    <input #textInput type="text" class="form-control" [value]="search | async"
+      [placeholder]="'PLACEHOLDER_FILTER' | translate" (input)="applySearch(textInput.value)">
+      <button type="button" class="btn btn-primary" (click)="aasTree.findNext()">
+        <i class="bi bi-chevron-down"></i>
+      </button>
+      <button type="button" class="btn btn-primary" (click)="aasTree.findPrevious()">
+        <i class="bi bi-chevron-up"></i>
+      </button>
     </div>
-    <div class="input-group me-2">
-        <select #select class="form-select" [(ngModel)]="dashboardPage">
-            <option *ngFor="let option of (dashboardPages | async)" [ngValue]="option">{{option}}</option>
-        </select>
-        <button type="button" class="btn btn-primary" (click)="addToDashboard('Line')"
-            [disabled]="!canAddToDashboard()">
-            <i class="bi bi-graph-up"></i>
-        </button>
-        <button type="button" class="btn btn-primary" (click)="addToDashboard('BarVertical')"
-            [disabled]="!canAddToDashboard()">
-            <i class="bi bi-bar-chart-line-fill"></i>
-        </button>
-    </div>
-    <div class="btn-group me-2" [hidden]="(editable | async) === false">
-        <button type="button" class="btn btn-primary" (click)="synchronize()" [disabled]="!canSynchronize()">
-            <i class="bi bi-arrow-repeat"></i>
-        </button>
-    </div>
-    <div class="btn-group me-2">
-        <button type="button" class="btn btn-primary" (click)="downloadDocument()" [disabled]="!canDownloadDocument()">
-            <i class="bi bi-download"></i>
-        </button>
-    </div>
-    <div class="btn-group me-2" [hidden]="(editable | async) === false">
-        <button type="button" class="btn btn-primary" (click)="undo()" [disabled]="!canUndo()">
-            <i class="bi bi-arrow-90deg-left"></i>
-        </button>
-        <button type="button" class="btn btn-primary" (click)="redo()" [disabled]="!canRedo()">
-            <i class="bi bi-arrow-90deg-right"></i>
-        </button>
-    </div>
-    <div class="btn-group me-2" [hidden]="(editable | async) === false">
-        <button type="button" class="btn btn-primary" (click)="newElement()" [disabled]="!canNewElement()">
-            <i class="bi bi-plus-lg"></i>
-        </button>
-        <button type="button" class="btn btn-primary" (click)="editElement()" [disabled]="!canEditElement()">
-            <i class="bi bi-pencil"></i>
-        </button>
-        <button type="button" class="btn btn-primary" (click)="deleteElement()" [disabled]="!canDeleteElement()">
-            <i class="bi bi-trash"></i>
-        </button>
-    </div>
-    <div class="input-group flex-grow-1 me-2">
-        <div class="input-group-text"><i class="bi bi-search"></i></div>
-        <input #textInput type="text" class="form-control" [value]="search | async"
-            [placeholder]="'PLACEHOLDER_FILTER' | translate" (input)="applySearch(textInput.value)">
-        <button type="button" class="btn btn-primary" (click)="aasTree.findNext()">
-            <i class="bi bi-chevron-down"></i>
-        </button>
-        <button type="button" class="btn btn-primary" (click)="aasTree.findPrevious()">
-            <i class="bi bi-chevron-up"></i>
-        </button>
-    </div>
-</ng-template>
+  </ng-template>
