--- a/projects/aas-portal/src/app/dashboard/dashboard.component.html
+++ b/projects/aas-portal/src/app/dashboard/dashboard.component.html
@@ -1,114 +1,122 @@
 <!-----------------------------------------------------------------------------
- !
- ! Copyright (c) 2019-2023 Fraunhofer IOSB-INA Lemgo,
- ! eine rechtlich nicht selbstaendige Einrichtung der Fraunhofer-Gesellschaft
- ! zur Foerderung der angewandten Forschung e.V.
- !
- !---------------------------------------------------------------------------->
+!
+! Copyright (c) 2019-2023 Fraunhofer IOSB-INA Lemgo,
+! eine rechtlich nicht selbstaendige Einrichtung der Fraunhofer-Gesellschaft
+! zur Foerderung der angewandten Forschung e.V.
+!
+!---------------------------------------------------------------------------->
 
 <div id="fhg-dashboard-container" class="container">
-    <div *ngFor="let row of rows" class="row">
-        <div *ngFor="let column of row.columns"
-            [ngClass]="'col border border-3 rounded m-1 ' + (selected(column) ? 'border-primary' : 'border-secondary')"
-            (click)="toggleSelection(column)">
-            <ng-container *ngIf="!editMode">
-                <canvas #chart [id]="column.id"></canvas>
-            </ng-container>
-            <ng-container *ngIf="editMode">
-                <form class="pt-2">
-                    <div class="row mb-2">
-                        <div class="col-sm-2 col-form-lable text-nowrap" translate>LABEL_NAME</div>
-                        <div class="col-sm-10">
-                            <select #sourceSelect class="form-select"
-                                (change)="changeSource(column, sourceSelect.value)">
-                                <option *ngFor="let source of getSources(column)" [value]="source">{{source}}</option>
-                            </select>
-                        </div>
+  @for (row of rows; track row) {
+    <div class="row">
+      @for (column of row.columns; track column) {
+        <div
+          [ngClass]="'col border border-3 rounded m-1 ' + (selected(column) ? 'border-primary' : 'border-secondary')"
+          (click)="toggleSelection(column)">
+          @if (!editMode) {
+            <canvas #chart [id]="column.id"></canvas>
+          }
+          @if (editMode) {
+            <form class="pt-2">
+              <div class="row mb-2">
+                <div class="col-sm-2 col-form-lable text-nowrap" translate>LABEL_NAME</div>
+                <div class="col-sm-10">
+                  <select #sourceSelect class="form-select"
+                    (change)="changeSource(column, sourceSelect.value)">
+                    @for (source of getSources(column); track source) {
+                      <option [value]="source">{{source}}</option>
+                    }
+                  </select>
+                </div>
+              </div>
+              <div class="row mb-2">
+                <div class="col-sm-2 col-form-lable text-nowrap" translate>LABEL_COLOR</div>
+                <div class="col-sm-10">
+                  <input #colorInput type="color" class="form-control form-control-color"
+                    [value]="getColor(column)" (change)="changeColor(column, colorInput.value)">
+                  </div>
+                </div>
+                <div class="row mb-2">
+                  <div class="col-sm-2 col-form-lable text-nowrap" translate>LABEL_CHART_TYPE</div>
+                  <div class="col-sm-10">
+                    <select #chartTypeSelect class="form-select"
+                      (change)="changeChartType(column, chartTypeSelect.value)">
+                      <option value="Line" [selected]="getChartType(column) === 'Line'" translate>
+                      OPTION_TIMELINE_CHART</option>
+                      <option value="BarVertical" [selected]="getChartType(column) === 'BarVertical'"
+                      translate>OPTION_BAR_VERTICAL_CHART</option>
+                      <option value="BarHorizontal" [selected]="getChartType(column) === 'BarHorizontal'"
+                      translate>OPTION_BAR_HORIZONTAL_CHART</option>
+                    </select>
+                  </div>
+                </div>
+                <div class="row mb-2">
+                  <label [for]="'inputMin' + column.id" class="col-sm-2 col-form-label"
+                  translate>LABEL_MIN</label>
+                  <div class="col-sm-10">
+                    <input #inputMin type="text" class="form-control" [id]="'inputMin' + column.id"
+                      [value]="getMin(column)" (change)="changeMin(column, inputMin.value)">
                     </div>
-                    <div class="row mb-2">
-                        <div class="col-sm-2 col-form-lable text-nowrap" translate>LABEL_COLOR</div>
-                        <div class="col-sm-10">
-                            <input #colorInput type="color" class="form-control form-control-color"
-                                [value]="getColor(column)" (change)="changeColor(column, colorInput.value)">
-                        </div>
+                  </div>
+                  <div class="row mb-2">
+                    <label [for]="'inputMax' + column.id" class="col-sm-2 col-form-label"
+                    translate>LABEL_MAX</label>
+                    <div class="col-sm-10">
+                      <input #inputMax type="text" class="form-control" [id]="'inputMax' + column.id"
+                        [value]="getMax(column)" (change)="changeMax(column, inputMax.value)">
+                      </div>
                     </div>
-                    <div class="row mb-2">
-                        <div class="col-sm-2 col-form-lable text-nowrap" translate>LABEL_CHART_TYPE</div>
-                        <div class="col-sm-10">
-                            <select #chartTypeSelect class="form-select"
-                                (change)="changeChartType(column, chartTypeSelect.value)">
-                                <option value="Line" [selected]="getChartType(column) === 'Line'" translate>
-                                    OPTION_TIMELINE_CHART</option>
-                                <option value="BarVertical" [selected]="getChartType(column) === 'BarVertical'"
-                                    translate>OPTION_BAR_VERTICAL_CHART</option>
-                                <option value="BarHorizontal" [selected]="getChartType(column) === 'BarHorizontal'"
-                                    translate>OPTION_BAR_HORIZONTAL_CHART</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="row mb-2">
-                        <label [for]="'inputMin' + column.id" class="col-sm-2 col-form-label"
-                            translate>LABEL_MIN</label>
-                        <div class="col-sm-10">
-                            <input #inputMin type="text" class="form-control" [id]="'inputMin' + column.id"
-                                [value]="getMin(column)" (change)="changeMin(column, inputMin.value)">
-                        </div>
-                    </div>
-                    <div class="row mb-2">
-                        <label [for]="'inputMax' + column.id" class="col-sm-2 col-form-label"
-                            translate>LABEL_MAX</label>
-                        <div class="col-sm-10">
-                            <input #inputMax type="text" class="form-control" [id]="'inputMax' + column.id"
-                                [value]="getMax(column)" (change)="changeMax(column, inputMax.value)">
-                        </div>
-                    </div>
-                </form>
-            </ng-container>
-        </div>
-    </div>
-</div>
+                  </form>
+                }
+              </div>
+            }
+          </div>
+        }
+      </div>
 
-<ng-template #dashboardToolbar>
-    <div class="input-group me-2">
-        <select #select class="form-select" [(ngModel)]="page">
-            <option *ngFor="let option of (pages | async)" [ngValue]="option">{{option.name}}</option>
-        </select>
-        <button type="button" class="btn btn-primary" (click)="addNew()" [disabled]="!editMode">
+      <ng-template #dashboardToolbar>
+        <div class="input-group me-2">
+          <select #select class="form-select" [(ngModel)]="page">
+            @for (option of (pages | async); track option) {
+              <option [ngValue]="option">{{option.name}}</option>
+            }
+          </select>
+          <button type="button" class="btn btn-primary" (click)="addNew()" [disabled]="!editMode">
             <i class="bi bi-plus"></i>
-        </button>
-        <button type="button" class="btn btn-primary" (click)="rename()" [disabled]="!editMode">
+          </button>
+          <button type="button" class="btn btn-primary" (click)="rename()" [disabled]="!editMode">
             <i class="bi bi-pen"></i>
-        </button>
-        <button type="button" class="btn btn-primary" (click)="delete()" [disabled]="!editMode">
+          </button>
+          <button type="button" class="btn btn-primary" (click)="delete()" [disabled]="!editMode">
             <i class="bi bi-trash"></i>
-        </button>
-    </div>
-    <div class="input-group me-2">
-        <div class="form-check form-switch pt-2">
+          </button>
+        </div>
+        <div class="input-group me-2">
+          <div class="form-check form-switch pt-2">
             <input class="form-check-input" type="checkbox" role="switch" id="toggleEditMode" [(ngModel)]="editMode">
             <label class="form-check-label" for="toggleEditMode" translate>Edit Mode</label>
+          </div>
         </div>
-    </div>
-    <div class="btn-group me-2" [hidden]="!editMode">
-        <button type="button" class="btn btn-primary" (click)="undo()" [disabled]="!canUndo()">
+        <div class="btn-group me-2" [hidden]="!editMode">
+          <button type="button" class="btn btn-primary" (click)="undo()" [disabled]="!canUndo()">
             <i class="bi bi-arrow-90deg-left"></i>
-        </button>
-        <button type="button" class="btn btn-primary" (click)="redo()" [disabled]="!canRedo()">
+          </button>
+          <button type="button" class="btn btn-primary" (click)="redo()" [disabled]="!canRedo()">
             <i class="bi bi-arrow-90deg-right"></i>
-        </button>
-    </div>
-    <div class="btn-group me-2" [hidden]="!editMode">
-        <button type="button" class="btn btn-primary" (click)="moveLeft()" [disabled]="!canMoveLeft()">
+          </button>
+        </div>
+        <div class="btn-group me-2" [hidden]="!editMode">
+          <button type="button" class="btn btn-primary" (click)="moveLeft()" [disabled]="!canMoveLeft()">
             <i class="bi bi-box-arrow-left"></i>
-        </button>
-        <button type="button" class="btn btn-primary" (click)="moveUp()" [disabled]="!canMoveUp()">
+          </button>
+          <button type="button" class="btn btn-primary" (click)="moveUp()" [disabled]="!canMoveUp()">
             <i class="bi bi-box-arrow-up"></i>
-        </button>
-        <button type="button" class="btn btn-primary" (click)="moveDown()" [disabled]="!canMoveDown()">
+          </button>
+          <button type="button" class="btn btn-primary" (click)="moveDown()" [disabled]="!canMoveDown()">
             <i class="bi bi-box-arrow-down"></i>
-        </button>
-        <button type="button" class="btn btn-primary" (click)="moveRight()" [disabled]="!canMoveRight()">
+          </button>
+          <button type="button" class="btn btn-primary" (click)="moveRight()" [disabled]="!canMoveRight()">
             <i class="bi bi-box-arrow-right"></i>
-        </button>
-    </div>
-</ng-template>
+          </button>
+        </div>
+      </ng-template>
