--- a/projects/aas-portal/src/app/start/remove-endpoint-form/remove-endpoint-form.component.html
+++ b/projects/aas-portal/src/app/start/remove-endpoint-form/remove-endpoint-form.component.html
@@ -1,38 +1,42 @@
 <!-----------------------------------------------------------------------------
- !
- ! Copyright (c) 2019-2023 Fraunhofer IOSB-INA Lemgo,
- ! eine rechtlich nicht selbstaendige Einrichtung der Fraunhofer-Gesellschaft
- ! zur Foerderung der angewandten Forschung e.V.
- !
- !---------------------------------------------------------------------------->
+!
+! Copyright (c) 2019-2023 Fraunhofer IOSB-INA Lemgo,
+! eine rechtlich nicht selbstaendige Einrichtung der Fraunhofer-Gesellschaft
+! zur Foerderung der angewandten Forschung e.V.
+!
+!---------------------------------------------------------------------------->
 
 <form (ngSubmit)="submit()">
-    <div class="modal-header text-info">
-        <h4 class="modal-title">
-            <i class="bi bi-trash"></i>
-            <span class="ms-2" translate>CAPTION_REMOVE_ENDPOINT</span>
-        </h4>
-        <button type="button" class="btn-close" (click)="cancel()"></button>
-    </div>
-    <div class="modal-body">
-        <ngb-toast *ngFor="let message of messages" [autohide]="false" class="bg-danger w-100 mb-3">
-            <div class="d-flex">
-                <div class="flex-grow-1">{{ message }}</div>
-            </div>
-        </ngb-toast>
-        <ul class="list-group">
-            <li *ngFor="let item of endpoints" class="list-group-item">
-                <input class="form-check-input me-1" type="checkbox" [id]="'input' + item.name"
-                    [(ngModel)]="item.selected" name="selected" (change)="inputChange()">
-                <label class="form-check-label" [for]="'input' + item.name">
-                    <span>{{item.name}}</span><br>
-                    <span class="ts-small">{{item.url}}</span>
-                </label>
-            </li>
-        </ul>
+  <div class="modal-header text-info">
+    <h4 class="modal-title">
+      <i class="bi bi-trash"></i>
+      <span class="ms-2" translate>CAPTION_REMOVE_ENDPOINT</span>
+    </h4>
+    <button type="button" class="btn-close" (click)="cancel()"></button>
+  </div>
+  <div class="modal-body">
+    @for (message of messages; track message) {
+      <ngb-toast [autohide]="false" class="bg-danger w-100 mb-3">
+        <div class="d-flex">
+          <div class="flex-grow-1">{{ message }}</div>
+        </div>
+      </ngb-toast>
+    }
+    <ul class="list-group">
+      @for (item of endpoints; track item) {
+        <li class="list-group-item">
+          <input class="form-check-input me-1" type="checkbox" [id]="'input' + item.name"
+            [(ngModel)]="item.selected" name="selected" (change)="inputChange()">
+            <label class="form-check-label" [for]="'input' + item.name">
+              <span>{{item.name}}</span><br>
+              <span class="ts-small">{{item.url}}</span>
+            </label>
+          </li>
+        }
+      </ul>
     </div>
     <div class="modal-footer">
-        <button type="submit" class="btn btn-primary" translate>CMD_OK</button>
-        <button type="button" class="btn btn-secondary" (click)="cancel()" translate>CMD_CANCEL</button>
+      <button type="submit" class="btn btn-primary" translate>CMD_OK</button>
+      <button type="button" class="btn btn-secondary" (click)="cancel()" translate>CMD_CANCEL</button>
     </div>
-</form>
+  </form>
