--- a/projects/aas-portal/src/app/aas/aas.component.html
+++ b/projects/aas-portal/src/app/aas/aas.component.html
@@ -10,7 +10,7 @@
     <div class="row mt-1">
         <div class="d-flex flex-row">
             <div class="border border-secondary rounded p-1">
-                <fhg-img [height]="88" [width]="88" [src]="thumbnail" alt="assets/resources/aas.svg" />
+                <fhg-img [height]="88" [width]="88" [src]="(thumbnail | async)!" alt="assets/resources/aas.svg" />
             </div>
             <div class="d-flex flex-row ps-1">
                 <div class="d-flex flex-column">
@@ -21,17 +21,17 @@
                     <div class="fw-bold text-end small text-nowrap" translate>LABEL_ASSET_ID</div>
                 </div>
                 <div class="d-flex flex-column flex-grow-1 ps-1">
-                    <div class="small text-nowrap">{{address}}</div>
-                    <div class="small text-nowrap">{{idShort}}</div>
-                    <div class="small text-nowrap">{{id}}</div>
-                    <div class="small text-nowrap">{{version}}</div>
-                    <div class="small text-nowrap">{{assetId}}</div>
+                    <div class="small text-nowrap">{{address | async}}</div>
+                    <div class="small text-nowrap">{{idShort | async}}</div>
+                    <div class="small text-nowrap">{{id | async}}</div>
+                    <div class="small text-nowrap">{{version | async}}</div>
+                    <div class="small text-nowrap">{{assetId | async}}</div>
                 </div>
             </div>
         </div>
     </div>
     <div class="row">
-        <fhg-aas-tree #aasTree [state]="state | async" [search]="search" [document]="document"
+        <fhg-aas-tree #aasTree [state]="state | async" [search]="search" [document]="document | async"
             [(selected)]="selectedElements">
         </fhg-aas-tree>
     </div>
@@ -53,11 +53,11 @@
             }
         </select>
         <button type="button" class="btn btn-primary" (click)="addToDashboard('Line')"
-            [disabled]="!canAddToDashboard()">
+            [disabled]="!canAddToDashboard">
             <i class="bi bi-graph-up"></i>
         </button>
         <button type="button" class="btn btn-primary" (click)="addToDashboard('BarVertical')"
-            [disabled]="!canAddToDashboard()">
+            [disabled]="!canAddToDashboard">
             <i class="bi bi-bar-chart-line-fill"></i>
         </button>
     </div>
@@ -68,7 +68,7 @@
         </button>
     </div>
     <div class="btn-group me-2">
-        <button type="button" class="btn btn-primary" (click)="downloadDocument()" [disabled]="!canDownloadDocument()">
+        <button type="button" class="btn btn-primary" (click)="downloadDocument()">
             <i class="bi bi-download"></i>
         </button>
     </div>
